[feature] training plan save via AWS S3 instead of to a folder